@@ -18,18 +18,57 @@
 
 .TkUp <- FALSE
 
-.onLoad <- function(libname, pkgname)
-{
-    ## Use local = FALSE to allow easy loading of Tcl extensions
-    library.dynam("tcltk", pkgname, libname, local = FALSE)
-    routines <- getDLLRegisteredRoutines("tcltk", addNames = FALSE)
-    ns <- asNamespace(pkgname)
-    for(i in c(1,4)) # .C and .External
-        lapply(routines[[i]],
-               function(sym) assign(paste0(".C_", sym$name), sym, envir = ns))
-    .TkUp <<- .C(.C_tcltk_init, 0L)[[1L]] == 1L
-    addTclPath(system.file("exec", package = "tcltk"))
-    invisible()
+.onLoad <- if (!grepl("darwin", R.version$os)) {
+    function(libname, pkgname)
+    {
+        ## Use local = FALSE to allow easy loading of Tcl extensions
+        library.dynam("tcltk", pkgname, libname, local = FALSE)
+        routines <- getDLLRegisteredRoutines("tcltk", addNames = FALSE)
+        ns <- asNamespace(pkgname)
+        for(i in c(1,4))                # .C and .External
+            lapply(routines[[i]],
+                   function(sym) assign(paste0(".C_", sym$name), sym, envir = ns))
+        .TkUp <<- .C(.C_tcltk_init, 0L)[[1L]] == 1L
+        addTclPath(system.file("exec", package = "tcltk"))
+        invisible()
+    }
+} else {
+    function(libname, pkgname)
+    {
+        ## This might be built against Aqua or X11 Tk
+
+        ## If built against X11 Tk, check the Tcl/Tk libraries are
+        ## installed, and check libX11 is present since this is a
+        ## common cause of problems with CRAN binary installs reported
+        ## for Rcmdr.
+        r_arch <- .Platform$r_arch
+        DLL <- file.path(libname, pkgname, "libs", r_arch, "tcltk.so")
+        out <- system2("otool", c("-L", shQuote(DLL)), stdout = TRUE)
+        ind <- grep("libtk[.0-9]+[.]dylib", out)
+        if(length(ind)) {
+            this <- sub(" .*", "", sub("^\t", "", out[ind]))
+##            message("tcltk DLL is linked to ", shQuote(this))
+            if(!file.exists(this))
+                stop("Tcl/Tk libraries are missing: install the Tcl/Tk component from the R installer")
+        }
+        ind <- grep("libX11[.][0-9]+[.]dylib", out)
+        if(length(ind)) {
+            this <- sub(" .*", "", sub("^\t", "", out[ind]))
+##            message("tcltk DLL is linked to ", shQuote(this))
+            if(!file.exists(this))
+                stop("X11 library is missing: install XQuartz from xquartz.macosforge.org")
+        }
+
+        library.dynam("tcltk", pkgname, libname, local = FALSE)
+        routines <- getDLLRegisteredRoutines("tcltk", addNames = FALSE)
+        ns <- asNamespace(pkgname)
+        for(i in c(1,4))                # .C and .External
+            lapply(routines[[i]],
+                   function(sym) assign(paste0(".C_", sym$name), sym, envir = ns))
+        .TkUp <<- .C(.C_tcltk_init, 0L)[[1L]] == 1L
+        addTclPath(system.file("exec", package = "tcltk"))
+        invisible()
+    }
 }
 
 ## .onUnload <- function(libpath) {
